--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,15 @@
 ### Java ###
 # Compiled class file
 *.class
+*/*.class
 
 # Log file
 *.log
+*/*.log
 
 # BlueJ files
 *.ctxt
+*/*.ctxt
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
